--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
+    "pg": "^8.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
