--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode development --watch",
     "build-prod": "webpack -p --mode production",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "heroku-postbuild": "npm install && npm run build-prod"
   },
   "dependencies": {
     "axios": "^0.20.0",
